--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
   <body>
 
     <nav class="navbar navbar-default"><div class="container-fluid"><div class="navbar-header">  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">    <span class="sr-only">Toggle navigation</span>    <span class="icon-bar"></span>    <span class="icon-bar"></span>    <span class="icon-bar"></span>  </button>  <a class="navbar-brand" href="/"><img alt="考選部" width="50" height="50" src="./images/logo.png"><div id="icon-text"><span>中華民國考選部</span><br><span>Ministry of Examination R.O.C.</span></div>  </a></div> <div id="navbar" class="navbar-collapse collapse">    <ul class="nav navbar-nav navbar-right">      <li class="divider-vertical">        <a id="home" href="/">關於考選部</a>      </li>      <li class="divider-vertical"><a href="/about">考選法規</a></li>      <li class="divider-vertical"><a href="/sponsor">考試資訊</a></li>      <li class="divider-vertical"><a href="/report">資料與統計</a></li>      <li class="divider-vertical"><a href="/blog">便民服務</a></li>      <li><a href="/en">English</a></li>    </ul>  </div><!--/.nav-collapse --></div><!--/.container-fluid --></nav>  <div class="container-fluid">
-		<div id="sec1">
+		<div id="sec1" class="sections">
 			<div class="form-group">
 				<input class="form-control input-lg" id="inputlg" type="text" placeholder="Search...">
+			</div>
+		</div>
+		<div id="sec2" class="sections">
+		</div>
+		<div id="sec3" class="sections">
+			<h2>政府機關入口網站 / </h2>
+			<div class="row">
+				<div class="col-md-2 entrance doubleH singleW">總統府</div>
+				<div class="col-md-4 entrance singleH doubleW">立法院</div>
+				<div class="col-md-2 entrance singleH singleW">考試院</div>
+				<div class="col-md-2 entrance singleH singleW">監察院</div>
+				<div class="col-md-4 entrance singleH doubleW">行政院</div>
+				<div class="col-md-4 entrance singleH doubleW">司法院</div>
+				<div class="col-md-4 entrance singleH doubleW">國家安全會議</div>
+				<div class="col-md-4 entrance singleH doubleW">地方機關</div>
 			</div>
 		</div>
   </div>
