--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <html><head>
-    <meta charset="utf-8"><link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"><!--<meta name="viewport" content="width=550, initial-scale=1">--><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"><link rel="icon" type="image/x-icon" href="/favicon.ico"><meta property="og:title" content="Ministry of Examination R.O.C"><meta property="og:site_name" content="Ministry of Examination R.O.C"><meta property="og:description" content=""><title>Ministry of Examination R.O.C</title><meta http-equiv="Content-Type" content="text/html" charset="utf-8"><meta property="og:image" content=""><meta property="og:image:type" content="image/png"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"><link href="//fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet" type="text/css"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">    <link rel="stylesheet" href="./css/home.css">
+    <meta charset="utf-8"><link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"><!--<meta name="viewport" content="width=550, initial-scale=1">--><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="shortcut icon" type="image/x-icon" href="./favicon.ico"><link rel="icon" type="image/x-icon" href="./favicon.ico"><meta property="og:title" content="Ministry of Examination R.O.C"><meta property="og:site_name" content="Ministry of Examination R.O.C"><meta property="og:description" content=""><title>Ministry of Examination R.O.C</title><meta http-equiv="Content-Type" content="text/html" charset="utf-8"><meta property="og:image" content=""><meta property="og:image:type" content="image/png"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"><link href="//fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet" type="text/css"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">    <link rel="stylesheet" href="./css/home.css">
   </head>
   <body>
 
     <nav class="navbar navbar-default"><div class="container-fluid"><div class="navbar-header">  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">    <span class="sr-only">Toggle navigation</span>    <span class="icon-bar"></span>    <span class="icon-bar"></span>    <span class="icon-bar"></span>  </button>  <a class="navbar-brand" href="/"><img alt="考選部" width="50" height="50" src="./images/logo.png"><div id="icon-text"><span>中華民國考選部</span><br><span>Ministry of Examination R.O.C.</span></div>  </a></div> <div id="navbar" class="navbar-collapse collapse">    <ul class="nav navbar-nav navbar-right">      <li class="divider-vertical">        <a id="home" href="/">關於考選部</a>      </li>      <li class="divider-vertical"><a href="/about">考選法規</a></li>      <li class="divider-vertical"><a href="/sponsor">考試資訊</a></li>      <li class="divider-vertical"><a href="/report">資料與統計</a></li>      <li class="divider-vertical"><a href="/blog">便民服務</a></li>      <li><a href="/en">English</a></li>    </ul>  </div><!--/.nav-collapse --></div><!--/.container-fluid --></nav>  <div class="container-fluid">
+		<div id="dialog">
+			<div id="dialog-title">
+				<i class="glyphicon glyphicon-certificate"></i> &nbsp;&nbsp;問題傳送門
+			</div>
+			<div id="dialog-content">
+				<div>
+					<i class="glyphicon glyphicon-certificate"></i> &nbsp;&nbsp;問題傳送門
+					<i class="glyphicon glyphicon-remove"></i>
+				</div>
+				<form role="form">
+					<input type="text" class="form-control" id="name" placeholder="姓名">
+					<input type="text" class="form-control" id="email" placeholder="Email">
+					<textarea class="form-control" rows="5" id="comment" placeholder="意見"></textarea>
+					<button type="submit" class="btn btn-default">Submit</button>
+				</form>
+			</div>
+		</div>
 		<div id="sec1" class="sections">
 			<div class="form-group">
 				<input class="form-control input-lg" id="inputlg" type="text" placeholder="Search...">
