Add second page.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
 				<input class="form-control input-lg" id="inputlg" type="text" placeholder="Search...">
 			</div>
 		</div>
-		<div id="sec2" class="sections">
+		<div id="sec2" class="sections row">
+			<div class="col-md-4">
+				<div id="bob-1" class="innerH">歷屆試題</div>
+				<div id="bob-2" class="innerH">考題違規列表</div>
+			</div>
+			<div id="bob-5" class="col-md-4 doubleH">考試資訊</div>
+			<div class="col-md-4">
+				<div id="bob-4" class="innerH">線上模擬</div>
+				<div id="bob-3" class="innerH">日期與場次</div>
+			</div>
 		</div>
 		<div id="sec3" class="sections">
 			<h2>政府機關入口網站 / </h2>
@@ -42,8 +51,7 @@
 			</div>
 		</div>
   </div>
-	<div style="height:90px;"></div>
-    <div id="footer">  <div class="copyright">  </div></div><script src="//code.jquery.com/jquery-1.12.0.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script><script src="./js/common.js" async=""></script>    <script src="./js/home.js"></script>
+  <script src="//code.jquery.com/jquery-1.12.0.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>  <script src="./js/home.js"></script>
   
 
 </body></html>
