--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-default"><div class="container-fluid"><div class="navbar-header">  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">    <span class="sr-only">Toggle navigation</span>    <span class="icon-bar"></span>    <span class="icon-bar"></span>    <span class="icon-bar"></span>  </button>  <a class="navbar-brand" href="/"><img alt="考選部" width="50" height="50" src="./images/logo.png"><div id="icon-text"><span>中華民國考選部</span><br><span>Ministry of Examination R.O.C.</span></div>  </a></div> <div id="navbar" class="navbar-collapse collapse">    <ul class="nav navbar-nav navbar-right">      <li class="divider-vertical">        <a id="home" href="/">關於考選部</a>      </li>      <li class="divider-vertical"><a href="/about">考選法規</a></li>      <li class="divider-vertical"><a href="/sponsor">考試資訊</a></li>      <li class="divider-vertical"><a href="/report">資料與統計</a></li>      <li class="divider-vertical"><a href="/blog">便民服務</a></li>      <li><a href="/en">English</a></li>    </ul>  </div><!--/.nav-collapse --></div><!--/.container-fluid --></nav>  <div class="container-fluid">
+    <nav class="navbar navbar-default"><div class="container-fluid"><div class="navbar-header">  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">    <span class="sr-only">Toggle navigation</span>    <span class="icon-bar"></span>    <span class="icon-bar"></span>    <span class="icon-bar"></span>  </button>  <a class="navbar-brand" href="/"><img alt="考選部" width="50" height="50" src="./images/logo.png"><div id="icon-text"><span>中華民國考選部</span><br><span>Ministry of Examination R.O.C.</span></div>  </a></div> <div id="navbar" class="navbar-collapse collapse">    <ul class="nav navbar-nav navbar-right">      <li class="divider-vertical active">        <a id="home" href="/">關於考選部</a>      </li>      <li class="divider-vertical"><a href="/about">考選法規</a></li>      <li class="divider-vertical"><a href="/sponsor">考試資訊</a></li>      <li class="divider-vertical"><a href="/report">資料與統計</a></li>      <li class="divider-vertical"><a href="/blog">便民服務</a></li>      <li><a href="/en">English</a></li>    </ul>  </div><!--/.nav-collapse --></div><!--/.container-fluid --></nav>  <div class="container-fluid">
 		<div id="dialog">
 			<div id="dialog-title">
 				<i class="glyphicon glyphicon-certificate"></i> &nbsp;&nbsp;問題傳送門
@@ -51,7 +51,7 @@
 			</div>
 		</div>
   </div>
-  <script src="//code.jquery.com/jquery-1.12.0.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>  <script src="./js/home.js"></script>
+    <script src="//code.jquery.com/jquery-1.12.0.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>    <script src="./js/home.js"></script>
   
 
 </body></html>
