--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-default"><div class="container-fluid"><div class="navbar-header">  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">    <span class="sr-only">Toggle navigation</span>    <span class="icon-bar"></span>    <span class="icon-bar"></span>    <span class="icon-bar"></span>  </button>  <a class="navbar-brand" href="/"><img alt="考選部" width="50" height="50" src="./images/logo.png"><div class="icon-text"><span>中華民國考選部</span><br><span>Ministry of Examination R.O.C.</span></div>  </a></div> <div id="navbar" class="navbar-collapse collapse">    <ul class="nav navbar-nav navbar-right">      <li class="divider-vertical active">        <a id="home" href="/">關於考選部</a>      </li>      <li class="divider-vertical"><a href="#">考選法規</a></li>      <li class="divider-vertical"><a href="#">考試資訊</a></li>      <li class="divider-vertical"><a href="#">資料與統計</a></li>      <li class="divider-vertical"><a href="#">便民服務</a></li>      <li><a href="/en">English</a></li>    </ul>  </div><!--/.nav-collapse --></div><!--/.container-fluid --></nav>  <div class="container-fluid">
+    <nav class="navbar navbar-default"><div class="container-fluid"><div class="navbar-header">  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">    <span class="sr-only">Toggle navigation</span>    <span class="icon-bar"></span>    <span class="icon-bar"></span>    <span class="icon-bar"></span>  </button>  <a class="navbar-brand" href="/"><img alt="考選部" width="50" height="50" src="./images/logo.png"><div class="icon-text"><span>中華民國考選部</span><br><span>Ministry of Examination R.O.C.</span></div>  </a></div> <div id="navbar" class="navbar-collapse collapse">    <ul class="nav navbar-nav navbar-right">      <li class="active">        <a id="home" href="/">關於考選部</a>      </li>      <li><a href="#">考選法規</a></li>      <li><a href="#">考試資訊</a></li>      <li><a href="#">資料與統計</a></li>      <li><a href="#">便民服務</a></li>      <li><a href="#">English</a></li>    </ul>  </div><!--/.nav-collapse --></div><!--/.container-fluid --></nav>  <div class="container-fluid">
 		<div id="dialog">
 			<div id="dialog-title">
 				<i class="glyphicon glyphicon-certificate"></i> &nbsp;&nbsp;問題傳送門
@@ -22,24 +22,26 @@
 			</div>
 		</div>
 		<div id="sec1" class="sections">
-			<div id="iconTitle">
-				<img alt="考選部" width="150" height="150" src="./images/logo.png">
-				<div class="icon-text">
-					<span>中華民國考選部</span><br>
-					<span>Ministry of Examination R.O.C.</span>
+			<div id="sec1-content">
+				<div id="iconTitle">
+					<img alt="考選部" width="150" height="150" src="./images/logo.png">
+					<div class="icon-text">
+						<span>中華民國考選部</span><br>
+						<span>Ministry of Examination R.O.C.</span>
+					</div>
 				</div>
-			</div>
-			<div class="form-group">
-				<input class="form-control input-lg" id="inputlg" type="text" placeholder="Search... (輸入考試名稱或任何欲查詢關鍵字)">
+				<div class="form-group">
+					<input class="form-control input-lg" id="inputlg" type="text" placeholder="Search... (輸入考試名稱或任何欲查詢關鍵字)">
+				</div>
 			</div>
 		</div>
 		<div id="sec2" class="sections row">
-			<div class="col-md-4">
+			<div class="col-md-4 col-sm-4">
 				<div id="bob-1" class="innerH"><a href="#sec2">歷屆試題</a></div>
 				<div id="bob-2" class="innerH"><a href="#sec2">考題違規列表</a></div>
 			</div>
-			<div id="bob-5" class="col-md-4 doubleH"><a href="#sec2">考試資訊</a></div>
-			<div class="col-md-4">
+			<div id="bob-5" class="col-md-4 col-sm-4 doubleH"><a href="#sec2">考試資訊</a></div>
+			<div class="col-md-4 col-sm-4">
 				<div id="bob-4" class="innerH"><a href="#sec2">線上模擬</a></div>
 				<div id="bob-3" class="innerH"><a href="#sec2">日期與場次</a></div>
 			</div>
@@ -47,14 +49,14 @@
 		<div id="sec3" class="sections">
 			<h2>政府機關入口網站 / </h2>
 			<div class="row">
-				<a href="#sec3" class="col-md-2 entrance doubleH singleW">總統府</a>
-				<a href="#sec3" class="col-md-4 entrance singleH doubleW">立法院</a>
-				<a href="#sec3" class="col-md-2 entrance singleH singleW">考試院</a>
-				<a href="#sec3" class="col-md-2 entrance singleH singleW">監察院</a>
-				<a href="#sec3" class="col-md-4 entrance singleH doubleW">行政院</a>
-				<a href="#sec3" class="col-md-4 entrance singleH doubleW">司法院</a>
-				<a href="#sec3" class="col-md-4 entrance singleH doubleW">國家安全會議</a>
-				<a href="#sec3" class="col-md-4 entrance singleH doubleW">地方機關</a>
+				<a href="#sec3" class="col-md-2 col-sm-2 col-xs-6 entrance doubleH singleW">總統府</a>
+				<a href="#sec3" class="col-md-4 col-sm-4 col-xs-6 entrance singleH doubleW">立法院</a>
+				<a href="#sec3" class="col-md-2 col-sm-2 col-xs-6 entrance singleH singleW">考試院</a>
+				<a href="#sec3" class="col-md-2 col-sm-2 col-xs-6 entrance singleH singleW">監察院</a>
+				<a href="#sec3" class="col-md-4 col-sm-4 col-xs-6 entrance singleH doubleW">行政院</a>
+				<a href="#sec3" class="col-md-4 col-sm-4 col-xs-6 entrance singleH doubleW">司法院</a>
+				<a href="#sec3" class="col-md-4 col-sm-4 col-xs-6 entrance singleH doubleW">國家安全會議</a>
+				<a href="#sec3" class="col-md-4 col-sm-4 col-xs-6 entrance singleH doubleW">地方機關</a>
 			</div>
 		</div>
   </div>
